--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -3,21 +3,23 @@
 .row.padded-row
   .col-md-12
     h1 GDS Vision and Goals for 2016/17
-    p.lead This site explains what GDS is doing in the 2016/17 financial year. #{link_to "Learn more.",about_path}
+    p.lead This site aims to show what GDS is doing in the 2016/17 financial year. These are <b>DRAFT</b> goals which are likely to change dramatically in the first few months of this year. If you see something that isn't right, please speak to your group PMO to have it corrected. #{link_to "Learn more.",about_path}
 .row.padded-row
   .col-md-12
     h2 Vision
-    h3.vision Government is transformed by GDS supporting departments to deliver end to end services that are designed and built around user needs.
+    h3.vision We want to help departments work together to transform government to meet user needs.
+    /Previously
+    /Government is transformed by GDS supporting departments to deliver end to end services that are designed and built around user needs.
 .row.padded-row
   .col-md-12
-    h2 Goals that will help us achieve this vision:
+    h2 To achieve this vision we will
     ol.nice_list
       li
         .point
           h3 Provide standards, policy, support, and guidance so that services and technology work effectively and consistently for the public and government.
       li
         .point
-          h3 Create the platforms and tools that make it simple for government to build, iterate and retire services.
+          h3 Create, run and continuously improve the platforms and tools that make it simple for government to build, iterate and retire services.
       li
         .point
           h3 Lead the digital, data and technology function so that government has the skills and capability it needs to transform itself.
