--- a/app/views/welcome/about.html.slim
+++ b/app/views/welcome/about.html.slim
@@ -1,12 +1,14 @@
 markdown:
 
   # About this tool
-  <p class="lead">This is a pre-alpha sketch for how GDS might share it's 2016/17 goals with the wider world. The aim is to make it simple for people to find out how our goals align to deliver our broader vision, who's doing what, how well we're delivering and where we need to make changes. It's very early days and is being developed without a service delivery team but with your input, it will improve. Thank you for contributing!</p>
+  <p class="lead">This is a pre-alpha sketch for how GDS might share our 2016/17 goals. The aim is to make it simple for people to find out how our goals align, who's doing what, how well we're delivering and where we need to make changes. It's very early days and is being developed without a service delivery team but with your <a href="https://docs.google.com/document/d/1oR76UEjYT0DWFPk0wZVDaJxtAy5UevM2mIvoNmcZDCw/edit">feedback</a>, it will improve. Thank you for contributing!</p>
 
   ## Guide
 
-  ### My team's goals don't look quite right. Can I update them?
-  Yes! Please contact your Group PMO to make sure the goals for your team are [accurate, measurable, and valuable](https://en.wikipedia.org/wiki/SMART_criteria). We expect to be updating these throughout the year.
+  ### About these goals
+  This is the first time we've attempted to write down everything that's happening at GDS. These goals are still a draft provided by the teams and group PMOs. Please contact your Group PMO to make sure the goals for your team are [accurate, measurable, and valuable](https://en.wikipedia.org/wiki/SMART_criteria).
+
+  We expect to iterate these throughout the year.
 
   ### Measuring progress against goals
   Goals should be scorable at any time on a scale from 0-1 (or 0 to 100%). Soon, delivery managers, directors, product owners, etc. will be able to udpate scores as regularly as they like and must provide a brief narrative to explain the score they've given the goal at that time. If a goal has sub-goals, its score will be the average score of its sub-goals at any particular moment in time.
@@ -18,4 +20,4 @@ markdown:
   Thanks for asking! The most important thing is to get the content right. See above about speaking with your group PMO to improve the quality of the goals. There are lots of ways to help. The simplest is by using the tool and telling others about it. Feedback is very welcome. If you're in GDS please add your comments to [this doc](https://docs.google.com/document/d/1oR76UEjYT0DWFPk0wZVDaJxtAy5UevM2mIvoNmcZDCw/edit).  The code is all on [github](https://github.com/peterkappus/panoflex) and pull-requests are more than welcome! Are you a **developer, designer, content designer, user researcher, or service deisgner? Please get in touch; we'd love your help!
 
   ### Who made this thing?
-  Currently it's being built by the Delivery Operations team at GDS. Come and say hello (on the 7th floor of Aviation House) if you'd like to learn more.
+  Currently it's being built by the Delivery Operations team at GDS (Poss Apostolou, Peter Kappus, Patrick Boguzas, Noelia Redondo-Aparicio. Come and say hello (on the 7th floor of Aviation House) if you'd like to learn more.
