--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,8 +1,11 @@
 .row
   .col-md-12
-    .page-header
-      h1 GDS Delivery Dashboard
-      p.lead This site explains what GDS is doing in the 2016/17 financial year. It is currently only open to GDS internal staff but we hope to open it up to our colleages in Cabinet Office and the public, soon.
+    h1 GDS Delivery Dashboard
+    p.lead This site explains what GDS is doing in the 2016/17 financial year. It is currently only open to GDS internal staff but we hope to open it up to our colleages in Cabinet Office and the public, soon.
 
 
-      = link_to "Sign in", "/auth/google_oauth2", :class=>"button button-start"
+    = link_to "Sign in", "/auth/google_oauth2", :class=>"button button-start"
+
+.row
+  .col-md-12
+    br
