--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -34,6 +34,10 @@
 - content_for :content do
   #wrapper.grid-row
     main#content.column-two-thrids[role="main"]
+      .phase-banner-alpha
+        p
+          strong.phase-tag PRE-ALPHA
+          span This is a proof of concept only. Goals are in DRAFT. Your <a href="https://docs.google.com/document/d/1oR76UEjYT0DWFPk0wZVDaJxtAy5UevM2mIvoNmcZDCw/edit">feedback</a> will help us to improve it.
       .inner-block
         - flash.each do |name, msg|
           = content_tag :div, class: "alert alert-#{ name == "error" ? "danger" : "success" } alert-dismissable", role: "alert" do
@@ -53,6 +57,4 @@
             i Signed in as #{session['name']}
             br
             =link_to :Logout, logout_path
-          - else
-            =link_to :Login, login_path
 = render template: "layouts/govuk_template"
