--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -34,7 +34,7 @@
 - content_for :content do
   #wrapper.grid-row
     main#content.column-two-thrids[role="main"]
-      .phase-banner-alpha
+      .phase-banner-alpha.noprint
         p
           strong.phase-tag PRE-ALPHA
           span This is a proof of concept only. Goals are in DRAFT. Your <a href="https://docs.google.com/document/d/1oR76UEjYT0DWFPk0wZVDaJxtAy5UevM2mIvoNmcZDCw/edit">feedback</a> will help us to improve it.
