added more description to index page for comms team to review in production.

--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -1,11 +1,17 @@
 = render 'breadcrumb'
-
 .row.padded-row
-  .col-md-12
-    h1 GDS Vision and Goals for 2016/17
+  .col-md-12.signage
+    h1 What will GDS do this year?
     .print_only
       h4 Current at #{Time.now.strftime("%-m %b %Y")}
-    p.lead These are <b>DRAFT</b> goals for what GDS is doing in 16/17. They have been established via group PMOs and teams. They are likely to change dramatically in the first few months of this year. Please review and give feedback to your group PMO so we can improve them. #{link_to "Learn more.",about_path, :class=>'noprint'}
+    p.lead These milestones have been taken from the latest business plans and iterated with the PMOs (project management offices) for each group. Are they still right? We expect them to change during the year but need a good feedback loop to ensure they always reflect the work we're doing and have done. Please speak to your group PMO for #{link_to "Learn more.",about_path, :class=>'noprint'}
+
+    h2 What is this tool?
+    p.lead The Delivery Ops team is exploring new ways of reporting on what GDS is doing. Do you like seeing progress against the business plan goals? Is it helpful to have a central place to share and view this information across GDS? Did you learn something new about GDS? Would you update this?
+
+    h3 Thanks for making GDS more transparent!
+
+    .page-break
 .row.padded-row
   .col-md-12
     h2 Vision
