--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,11 +1,6 @@
 .row
   .col-md-12
     h1 GDS Delivery Dashboard
-    p.lead This site explains what GDS is doing in the 2016/17 financial year. It is currently only open to GDS internal staff but we hope to open it up to our colleages in Cabinet Office and the public, soon.
-
+    p.lead This site explains what GDS is delivering in the 2016/17 financial year. It is currently only open to GDS & Cabinet Office staff.
 
     = link_to "Sign in", "/auth/google_oauth2", :class=>"button button-start"
-
-.row
-  .col-md-12
-    br
