add scores back into views, change authentication and session handling to create user objects and store uid instead of name/email in session object. Remove gdsdash domain name redirct so we can use that one for a sandbox.

--- a/app/views/goals/show.html.slim
+++ b/app/views/goals/show.html.slim
@@ -34,7 +34,7 @@
         =link_to "Add a score", new_goal_score_path(@goal), :class=>"btn-sm btn-success"
   - if(@goal.scores.empty?)
       br
-      p.small No updates yet.
+      p.lead Updates will show progress against a goal by providing a history of the scores and supporting narratives at diffrent points in time. They should be added monthly or whenever there is new delivery information to report.
   - else
     - @goal.scores.each do |score|
       .row
