consolidated groups and teams to single page, updated navigation and cucumber tests, updated backlog in readme, added 'SANDBOX' banners for sandbox environments.

--- a/app/views/groups/index.html.slim
+++ b/app/views/groups/index.html.slim
@@ -3,7 +3,7 @@
     = link_to new_group_path, class: 'btn btn-primary' do
       span.glyphicon.glyphicon-plus
       |  New Group
-  h1 GDS Groups
+  h1 GDS Groups & Teams
   /h3 =link_to Goal.count.to_s + ' Goals', goals_path
   /
     h3 #{Role.count} Roles
