--- a/app/views/groups/show.html.slim
+++ b/app/views/groups/show.html.slim
@@ -5,7 +5,8 @@
       small As of #{Time.now.strftime("%-m %b %Y")}
     h3 2016/17 Goals
     div style="clear:both"
-    h1.heading-xlarge = @group.name + " Group"
+    .pull-right =link_to "Edit Group", edit_group_path(@group) if is_admin?
+    h1.heading-xlarge =@group.name + " Group"
     h4 £#{@group.budget_in_millions}m - #{@group.headcount} people - #{@group.goals.count} goals
 
 .row
