--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -188,8 +188,9 @@ input.bignum
 
 textarea.bigtext
   font-size: 2rem
-  width: 45rem
+  width: 100%
   height: 10rem
+
 
 h2.score
   font-size: 5rem
