--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -51,7 +51,7 @@
           == render partial: 'shared/sub_goals', locals: {sub_goals: group.top_level_goals}
           .page-break
 
-    - if is_admin?
+    - if is_admin? # && current_user.name.match(/kappus|test/i)
       = form_tag import_okrs_goals_path, multipart: true, class: "form-inline noprint" do
         .form-group
           =file_field_tag :file, :class=>"form-control"
