--- a/app/views/teams/_form.html.slim
+++ b/app/views/teams/_form.html.slim
@@ -17,7 +17,7 @@
   .form-group
     = f.label :group, class: "col-sm-2 control-label"
     .col-sm-10
-      = f.text_field :group, class: "form-control"
+      =collection_select :team, :group_id, Group.all, :id, :name, {prompt:true, include_blank:true}, {class: :selectpicker}
   .form-group
     .col-sm-offset-2.col-sm-10
       = f.submit class: "btn btn-primary"
