--- a/app/views/teams/index.html.slim
+++ b/app/views/teams/index.html.slim
@@ -16,4 +16,4 @@
           td
             =link_to team.name, team
           td
-            = link_to team.group.name, team.group
+            = link_to team.group.name, team.group if team.group
