add buttons so people can add goals, warnings about adding child goals to goals which already have updates, and some tests.

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -181,6 +181,11 @@ a.btn-sm
 .headings h2
   border-bottom: 1px solid #eee
 
+.bignum_suffix
+  @include bold-36
+  display: inline
+  margin-left: 1rem
+
 input.bignum
   font-size: 4rem
   width: 10rem !important
