--- a/app/views/welcome/about.html.slim
+++ b/app/views/welcome/about.html.slim
@@ -1,7 +1,7 @@
 
   h1 Guide
 
-  p.lead The Delivery Ops team is exploring new ways of reporting on what GDS is doing. Do you like seeing progress against the business plan goals? Is it helpful to have a central place to share and view this information across GDS? Did you learn something new about GDS? Would you update this?
+  p.lead The Delivery Ops team is exploring new ways of reporting on what GDS is doing. Do you like seeing progress against the business plan goals? Is it helpful to have a central place to share and view this information across GDS? Would you commit to updating this regularly?
 
   p.lead Please give feedback on the tool to the Delivery Ops team (Peter Kappus, Patrick Boguzas, Poss Apostolou, or Noelia Redondo-Aparicio or add it to <a href="https://docs.google.com/document/d/1oR76UEjYT0DWFPk0wZVDaJxtAy5UevM2mIvoNmcZDCw/edit">this document</a>. If you have advice on user research, technology, GDS standards, content design, comms, engagement, policy, etc. Please get in touch! The code is all on [github](https://github.com/peterkappus/panoflex) and pull-requests are more than welcome!
 
