--- a/app/views/shared/_sub_goals.slim
+++ b/app/views/shared/_sub_goals.slim
@@ -1,3 +1,5 @@
+-if is_admin? && sub_goals.count > 0
+  = link_to "New Goal",new_goal_path, class: "btn-success btn-sm"
 ol.nice_list.goals
   - sub_goals.each do |sub_goal|
     li
