add ability to pass team/group id into new goal method

--- a/app/views/shared/_sub_goals.slim
+++ b/app/views/shared/_sub_goals.slim
@@ -1,5 +1,9 @@
 -if is_admin?
-  = link_to "New Goal",new_goal_path, class: "btn-success btn-sm"
+  .row
+    .col-md-12
+      .pull-right
+        = link_to "New Goal",new_goal_path, class: "btn-success btn-sm"
+        .clear
 ol.nice_list.goals
   - sub_goals.each do |sub_goal|
     li
