--- a/app/views/shared/_sub_goals.slim
+++ b/app/views/shared/_sub_goals.slim
@@ -1,5 +1,5 @@
 -if is_admin?
-  .row
+  .row.noprint
     .col-md-12
       .pull-right
         = link_to "New Goal",new_goal_path, class: "btn-success btn-sm"
